<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">
    <TextView
        android:paddingBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/titleRenameCategoryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_rename_category"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/editTextRenameCategoryDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLength="50"
        android:hint="@string/hint_rename_category"
        android:textSize="14sp"/>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkboxRenameCategoryDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_rename_category"
            android:gravity="center_vertical"
            android:textSize="12sp"/>
    </RelativeLayout>

</LinearLayout>