<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:id="@+id/titleTextAddCategoryDialog"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioUseExistingAddCategoryDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
            <LinearLayout

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/use_existing_category_dialog_text"/>
                <RelativeLayout
                    android:id="@+id/spinnerContainerAddCategoryDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_drawable"
                    android:clickable="true">
                    <Spinner
                        android:id="@+id/spinnerAddCategoryDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioAddNewAddCategoryDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_category_dialog_text"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/editTextNameAddCategoryDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:textSize="14sp"
                    android:hint="@string/edit_text_hint_add_category_dialog">
                </EditText>
            </LinearLayout>
        </LinearLayout>
    <CheckBox
        android:id="@+id/checkBoxAddCategoryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/check_box_add_category_dialog"/>




</LinearLayout>





